--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@
         <div class="about-content">
           <!-- Left Text -->
           <div class="about-text">
-            <h3 style="color: #fbaf08; font-size: 1.8em; margin-bottom: 15px;">Alabama Collective Hackaton</h3>
+            <h3 style="color: #fbaf08; font-size: 1.8em; margin-bottom: 15px;">Alabama Collective Hackathon</h3>
             <p>
               I expanded my entrepreneurial experience at Alabama Collective's Innovate Alabama Hackathon, where we tackled STEM education for youth in underserved Alabama towns. As technical lead, I built a functional website using the ChatGPT API to generate personalized certification roadmaps through a user-friendly interface. 
             </p>
